# template-imgui-sdl3gl3

./: CMakeLists.txt  makefile  readme.md
include/core/: core.hpp
include/glad/: gl.hpp
include/imgui/: imconfig.h
src/core/: loop.cpp  main.cpp
src/glad/: gl.cpp
src/imgui/: implot3d.cpp
